--- a/index.html
+++ b/index.html
@@ -1,6 +1,6 @@
 <!doctype HTML>
 <html>
-<img src="/RambleWood.jpg">
+<img src="/RambleWood-Apartments-Inside/RambleWood.jpg">
 <img src="/ramblewood-apartments-grandville-mi-1-br-1-ba---732-sf.jpg">
 <img src="/ramblewood-apartments-grandville-mi-renovated-bathroom-vanity.jpg">
 <img src="/ramblewood-apartments-grandville-mi-renovated-kitchen--tile-backsplash.jpg">
